--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,39 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+/* Full page  ------------------------------------*/
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  background-color: #2b303c;
+}
+
+/* header section ------------------------ */
+header {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #1a1d24;
+  color: #a6adba;
+  padding: 1.2rem;
+  font-size: large;
+}
+
+.header-links > a {
+  margin: 10px;
+  text-transform: uppercase;
+  font-size: medium;
+}
+
+/* Footer -------------------------------------------- */
+footer {
+  width: 100%;
+  background-color: #384152;
+  color: #fff;
+  text-align: center;
+  padding: 1rem;
+}
