--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,69 @@ header {
   font-size: medium;
 }
 
+/* Not found page -------------------------------------- */
+.not-found {
+  background-color: #2b303c;
+  width: 100%;
+  height: 100vh;
+  color: #a7adbb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.not-found > h1 {
+  font-size: 6rem;
+  line-height: 1;
+  margin-bottom: 2rem;
+}
+
+.not-found > p {
+  font-size: 3rem;
+  line-height: 1;
+  margin-bottom: 2rem;
+}
+
+.not-found > a {
+  display: flex;
+  align-items: center;
+  height: 4rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  min-height: 4rem;
+  font-size: 1.25rem;
+  background-color: #4f18bb;
+  font-weight: 200;
+  color: #ffffff;
+  border: none;
+  border-radius: 12px;
+}
+
+.not-found a > * {
+  padding-right: 3px;
+}
+
+/* About page ---------------------------------------- */
+.about {
+  background-color: #2b303c;
+  color: #a7adbb;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: top;
+}
+
+.about > h1 {
+  font-size: 3rem;
+  margin: 2rem;
+}
+
+.about > p {
+  font-size: 1.5rem;
+}
+
 /* Footer -------------------------------------------- */
 footer {
   width: 100%;
